--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,11 @@ erl_crash.dump
 
 # Also ignore archive artifacts (built via "mix archive.build").
 *.ez
+
+# vim git ignore files
+*~
+*.swp
+*.swo
+
+# DS_Store
+*.DS_Store
