Update to Elixir 1.13 support and fix warnings

--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -5,14 +5,19 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        otp: ["23.3.3"]
+        elixir: ["1.10.4", "1.13.3"]
     steps:
       - uses: actions/checkout@v2
       - uses: erlef/setup-elixir@v1
         with:
-          otp-version: '23.0.4'
-          elixir-version: '1.10.4'
+          otp-version: ${{matrix.otp}}
+          elixir-version: ${{matrix.elixir}}
       - uses: rrainn/dynamodb-action@v2.0.0
       - run: mix deps.get
       - run: mix compile
       - run: mix format --check-formatted
+        if: matrix.elixir == '1.13.3' # Only check formatting with the latest verison
       - run: mix test
