--- a/.github/workflows/on-push.yml
+++ b/.github/workflows/on-push.yml
@@ -5,24 +5,72 @@ env:
 jobs:
   build:
     runs-on: ubuntu-20.04
+    # See https://hexdocs.pm/elixir/compatibility-and-deprecations.html#compatibility-between-elixir-and-erlang-otp
     strategy:
       matrix:
-        otp: ["23.3.4.6"]
-        elixir: ["1.10.4", "1.13.4"]
+        include:
+          - pair:
+              otp: 26.x
+              elixir: 1.16.x
+            lint: lint
+          - pair:
+              otp: 26.x
+              elixir: 1.15.x
+          - pair:
+              otp: 25.x
+              elixir: 1.16.x
+          - pair:
+              otp: 25.x
+              elixir: 1.15.x
+          - pair:
+              otp: 25.x
+              elixir: 1.14.x
+          - pair:
+              otp: 25.x
+              elixir: 1.13.x
+          - pair:
+              otp: 24.x
+              elixir: 1.16.x
+          - pair:
+              otp: 24.x
+              elixir: 1.15.x
+          - pair:
+              otp: 24.x
+              elixir: 1.14.x
+          - pair:
+              otp: 24.x
+              elixir: 1.13.x
+          - pair:
+              otp: 24.x
+              elixir: 1.12.x
+          - pair:
+              otp: 24.x
+              elixir: 1.11.x
+          - pair:
+              otp: 23.x
+              elixir: 1.14.x
+          - pair:
+              otp: 23.x
+              elixir: 1.13.x
+          - pair:
+              otp: 23.x
+              elixir: 1.12.x
+          - pair:
+              otp: 23.x
+              elixir: 1.11.x
     steps:
       - uses: actions/checkout@v2
         name: "Checkout"
       - uses: erlef/setup-beam@v1
         name: "Setup Elixir"
         with:
-          otp-version: ${{matrix.otp}}
-          elixir-version: ${{matrix.elixir}}
-          version-type: strict
+          otp-version: ${{matrix.pair.otp}}
+          elixir-version: ${{matrix.pair.elixir}}
       - uses: rrainn/dynamodb-action@v2.0.0
       - run: mix deps.get
       - run: mix compile
       - run: mix format --check-formatted
-        if: matrix.elixir == '1.13.4' # Only check formatting with the latest version
+        if: matrix.lint # Only check formatting with the latest version
       - run: mix dialyzer
-        if: matrix.elixir == '1.13.4' # Only check dialyzer with latest version
+        if: matrix.elixir # Only check dialyzer with latest version
       - run: mix test
